# trainyousra

./: .env.example  .gitignore  AUTHORS  CONTRIBUTORS.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
src/yousra/: __init__.py  __main__.py  bot.py  config.py  constants.py  dashboard.py  llm.py  logging_setup.py  memory.py  persona.py
web/static/: style.css
web/templates/: index.html
