[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yousra"
version = "0.1.0"
description = "A curious X bot with a kindergartener mind who learns from replies"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Eric Zakariasson", email = "25622412+ericzakariasson@users.noreply.github.com" },
]

[project.urls]
Homepage = "https://x.com/trainyousra"
Repository = "https://github.com/trainyousra/trainyousra"
"X Profile" = "https://x.com/trainyousra"
dependencies = [
  "tweepy>=4.14.0",
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
]

[project.scripts]
yousra = "yousra.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
